[package]
name = "kuth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
axum = { version = "0.5", features = ["headers"] }
http = "0.2"
mime = "0.3"
dotenv = "0.15"
tokio = { version = "1.17", features = ["full"] }
tower-http = { version = "0.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mimalloc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
validator = { version = "0.15", features = ["derive"] }
sqlx = { version = "0.5", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
] }
sonyflake = "0.1"
uuid = { version = "1.1", features = ["v4"] }
tower = { version = "0.4", features = ["full"] }
lazy_static = "1.4"
pin-project-lite = "0.2"
futures-core = "0.3"
async-trait = "0.1"
regex = "1.5"
rand = "0.8"
rust-argon2 = { version = "1.0", features = ["crossbeam-utils"] }
redis = { version = "0.21", features = ["tokio-comp"] }
jsonwebtoken = "8.1"